# TSST_syndiff_viewer

./: .gitignore  README.md  pyproject.toml
config/: review_config.example.yaml
docs/: lc_review.md
review/: __init__.py  __main__.py  app.py  cli.py  config.py  crop_cache.py  ds9.py  event_index.py  mount.py  overlay_layers.py  paths_resolve.py  pipeline_labels.py  plot_lc.py  smoothing.py  sync_cache.py  tessreduce.py
review/support/: ffi_naming.py  manifest.py  paths.py  template_coverage.py  templates.py
scripts/: test_ds9_load.py  test_ds9_xpa.py
tests/: test_review_ds9.py  test_review_event_index.py  test_review_integration.py  test_review_mount.py  test_review_overlay.py  test_review_pipeline_labels.py  test_review_plot_selection.py  test_review_smoothing.py  test_review_store_cache.py  test_review_sync_cache.py  test_review_templates.py  test_review_tessreduce.py
