[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "syndiff-viewer"
version = "0.1.0"
description = "Laptop-only Plotly Dash light-curve review tool for SynDiff pipeline outputs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "dash>=2.14",
  "plotly>=5.18",
  "pandas>=2.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "pyyaml>=6.0",
  "astropy>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
syndiff-review = "review.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["review*"]
